# reputation

./: .env.example  .env.production.example  .env.vercel-supabase.example  .gcloudignore  .gitignore  0318refiner.md  CLAUDE.md  DESIGN.md  Makefile  README.md  codereview_v1.docx  design-qa.md  docker-compose.yml
admin/: Dockerfile  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  tsconfig.json  tsconfig.tsbuildinfo
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_add_query_matrix_priority.py  0003_add_performance_indexes.py  0004_add_competitor_mentions_to_sov.py  0005_add_local_entity_fields.py  0006_add_content_essence.py  0007_add_ai_query_targets.py  0008_dedupe_ai_query_variants.py  0009_add_measurement_runs.py  0010_add_exposure_actions.py  0011_add_content_brief_links.py  0012_add_exposure_content_link_uniqueness.py  0013_add_sales_leads.py  0014_add_admin_audit_logs.py  0015_add_lead_retention_columns.py  0016_add_content_references_and_body_updated_at.py  0017_add_faq_split_fields.py  0018_add_asset_storage_and_photo_types.py  0019_add_hospital_entity_identifiers.py  0020_add_sales_lead_conversion.py  0021_add_hospital_onboarding_source.py  0022_add_admin_users.py  0023_harden_hospital_json_and_fk_indexes.py  0024_audit_log_append_only.py  0025_add_aeo_domain_index.py  0026_add_content_carried_over_from.py  0027_add_domain_management_metadata.py  0028_release_blocker_integrity_constraints.py  0029_add_content_generation_claims.py  0030_unique_ai_query_target_hospital_name.py  0031_add_hospital_visual_theme.py  0032_add_post_publish_review.py  0033_add_cancelled_content_status.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/admin/: auth.py  content.py  domain.py  domain_connect.py  domain_setup.py  essence.py  exposure_actions.py  hospitals.py  leads.py  operations.py  query_targets.py  reports.py  sov.py
backend/app/api/public/: assets.py  leads.py  site.py
backend/app/core/: celery_app.py  config.py  database.py  observability.py  rate_limit.py  security.py
backend/app/models/: __init__.py  admin_user.py  audit.py  content.py  essence.py  hospital.py  lead.py  report.py  sov.py
backend/app/schemas/: __init__.py  content.py  essence.py  hospital.py  operations.py  query_target.py  report.py
backend/app/services/: admin_passwords.py  admin_session_revocation.py  asset_extractor.py  asset_storage.py  audit_log.py  content_brief.py  content_calendar.py  content_engine.py  content_publication.py  content_target_planner.py  cost_guard.py  domain_certificate_manager.py  essence_engine.py  essence_readiness.py  exposure_action_engine.py  exposure_content_linker.py  gcs_utils.py  hospital_lifecycle.py  hospital_profile_autofill.py  image_engine.py  lead_privacy.py  naver_place.py  notifier.py  report_engine.py  site_builder.py  site_revalidate.py  sov_engine.py
backend/app/templates/: report.html
backend/app/utils/: admin_user.py  authority_sources.py  backfill_content_images.py  db_locks.py  demo_seed.py  domain.py  error_page.py  essence_backfill.py  fix_director_credential.py  inspect_schema.py  medical_filter.py  production_readiness.py  reconcile_redbeat_schedule.py  seed_colon_cluster.py  unpublish_items.py
backend/app/workers/: health_server.py  monthly_slots.py  naver_sync.py  nightly_generation_batch.py  tasks.py
backend/tests/: conftest.py  test_actor_contracts.py  test_admin_actor_verification.py  test_admin_auth.py  test_admin_connect_domain.py  test_admin_domain.py  test_admin_domain_setup.py  test_admin_hospital_lifecycle.py  test_admin_hospitals_profile.py  test_admin_leads_conversion.py  test_admin_operations.py  test_admin_passwords.py  test_admin_rate_limit.py  test_admin_reports.py  test_admin_session_revocation.py  test_asset_extractor.py  test_asset_storage.py  test_authority_sources.py  test_celery_routing.py  test_config_security.py  test_content_attribution.py  test_content_brief.py  test_content_calendar.py  test_content_carryover.py  test_content_compliance_faq.py  test_content_engine.py  test_content_engine_seo_geo.py  test_content_publication.py  test_content_reject.py  test_content_schedule.py  test_content_target_planner.py  test_cost_guard.py  test_db_engine_config.py  test_db_locks.py  test_demo_seed.py  test_domain_certificate_manager.py  test_error_handlers.py  test_error_page.py  test_essence_api_threading.py  test_essence_approval_rescreen.py  (+32 more)
backend/tests/integration/: conftest.py  test_db_constraints.py
docs/: reputation_guide.html
scripts/: check_db_connection_budget.py  check_public_dns.py  check_user_facing_terms.py  check_vercel_supabase_deploy.py  demo_seed_runtime_smoke.py  deploy.sh  setup-gcp.sh  test_check_public_dns.py  test_deploy_preflight.py  test_deploy_runtime.py  test_e2e.sh  test_full.sh  test_terraform_static.py  test_vercel_supabase_preflight.py
site/: .dockerignore  Dockerfile  README.md  (+5 more)
(+227 files in other folders)
