[project]
name = "reputation-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.32",
    "starlette>=1.3.1",

    # DB
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",

    # Task Queue
    "celery[redis]>=5.4.0",
    "celery-redbeat>=2.2.0",  # beat 스케줄을 Redis에 보존 + 분산 락 (롤아웃 중 이중 dispatch 방지)
    "redis>=5.2.0",
    "flower>=2.0.0",

    # AI — 콘텐츠 생성
    "anthropic>=0.40.0",

    # AI — SoV 측정 + gpt-image-2 이미지 생성
    "openai>=1.66.0",
    "httpx>=0.28.0",
    "google-genai>=1.0.0",

    # AI — 이미지 생성
    "google-cloud-aiplatform>=1.70.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-certificate-manager>=1.7.0",

    # Retry
    "tenacity>=9.0.0",

    # Report
    "weasyprint>=69.0",
    "jinja2>=3.1.0",

    # Observability
    "sentry-sdk[fastapi,celery]>=2.0.0",

    # Rate Limiting
    "slowapi>=0.1.9",

    # Utils
    "pydantic>=2.10.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.0.0",

    # Asset extraction (AE 온보딩 자료 인입)
    "pypdf>=6.14.2",
    "python-docx>=1.1.0",
    "html2text>=2024.2.26",
    "arrow>=1.3.0",
    "python-slugify>=8.0.0",
    "dnspython>=2.6.0",

    # Security floors for transitive runtime dependencies.
    "cryptography>=48.0.1",
    "idna>=3.15",
    "pillow>=12.3.0",
    "tornado>=6.5.7",
    "urllib3>=2.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "httpx2>=2.7.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
